# Changelog #



##9.1.0 (2017-01-??)##
###New###
- Changed XML Serializer from default to unicode to match core version

###Fix###
 - 


 ---


##9.0.0 (2017-01-03)##
###New###
- Added full object caching. Prevents parsing the same object multiple times
- Added ParserSetting CacheMode; Default: Advanced
- Added ParserSetting CacheItemCountLimit; Default: 10.000
- Added way more code comments
- Added some 'Unknown' values in enums
- Added some benchmark unit tests
- Added unit tests for caching
- Added new ParserSettings to Serilization unit tests
- Added exception on wrong caching mode
- Removed old legacy UnitTest1.cs file
- Removed some useless comments

###Fix###
 - Wrong default unknown string in ParserSettings
 - Exception on not existing path in extensions


 ---


##8.2.0 (2016-12-24)##
###New###
- Added unit tests for Helper.GetResolutionString()
- Core-Uproject updated to match native .Net functionality
- Restructorized Projects
- Changelog is now part of the solution
- Moved some unit test files to the repo

###Fix###
 - Wrong default unknown string in ParserSettings
 - Exception on not existing path in extensions


---


##8.1.0 (2016-11-27)##
###New###
- Added Methods to parse full directories
- Added Extension Methodes to parse full directories
- Unit tests for extension methodes now at 100% soft coverage

###Fix###
 - Exception in extension methodes
 - Property exception in ParserResult
 - Possible exception fixes in some new parsing functions


---


##8.0.0 (2016-11-26)##
###New###
- Fileextension handling changed: Default is now the global dot net default (with dot E.g.: m4v -> .m4v)
- Switches from single class to worker class (SeriesIDParser) and  result class (SeriesIDResult)
- Property IsMultiEpisode is now danymicaly computed
- Property ParserSettingsUsed are now available in the SeriesIDResult object
- Properties FullTitle, ParsedString and IDString are now cached to improve performance on multiple access